--- a/options/pom.xml
+++ b/options/pom.xml
@@ -33,4 +33,9 @@
 
     <name>Libs -- Options</name>
 
+    <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
+    </build>
+
 </project>
