--- a/windows-management/pom.xml
+++ b/windows-management/pom.xml
@@ -31,4 +31,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>Libs -- Windows-Management</name>
+
+    <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
+    </build>
 </project>
