add commons-configurations2 dependency

--- a/options/pom.xml
+++ b/options/pom.xml
@@ -33,9 +33,19 @@
 
     <name>Libs -- Options</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.7</version>
+        </dependency>
+    </dependencies>
+
+
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
     </build>
+
 
 </project>
